--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - ./settings.gradle.kts:/opt/application/settings.gradle.kts
     ports:
       - "8080:8080"
+    env_file:
+      - ./environment/local.env
     networks:
       - app
 
