--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,10 @@ quarkus.http.port=80
 quarkus.http.test-port=0
 quarkus.http.host=0.0.0.0
 
+quarkus.datasource.username=${DB_USERNAME}
+quarkus.datasource.password=${DB_PASSWORD}
+quarkus.datasource.reactive.url=${DB_REACTIVE_URL}
+
 quarkus.log.console.level=INFO
 quarkus.log.console.format='%d{yyyy-MM-dd HH:mm:ss} app=loan-bu component=loan type=%p key=%X{key} message=%X{data} extra=%s class=%C thread="%t" exception="%e"%n'
 
